{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 814,
  "lineage": "d55a2281-fd70-56db-9007-4a41ef8b8493",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e3ecc445f460cb2",
            "association_id": "eipassoc-05323527b12599159",
            "domain": "vpc",
            "id": "eipalloc-01e3ecc445f460cb2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-076e0ebf3a990a781",
            "private_dns": "ip-10-0-1-7.us-east-2.compute.internal",
            "private_ip": "10.0.1.7",
            "public_dns": "ec2-18-221-120-132.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.120.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-nat_eip"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw-terraform",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofile-appserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024e6efaf93d85776",
            "arn": "arn:aws:ec2:us-east-2:733922282178:instance/i-004f3db724e5c0eeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004f3db724e5c0eeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mamatha-aws-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04866608a4ec6c3be",
            "private_dns": "ip-10-0-1-156.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.156",
            "public_dns": "ec2-3-139-233-166.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.233.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0013e6bfd025753a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047149ea0ff603529",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "vprofile-appserver"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "vprofile-appserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c466244af30f35a8"
            ]
          },
          "dependencies": [
            "aws_security_group.SG-appserver",
            "aws_subnet.public_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofile-dbserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011d59a275b482a49",
            "arn": "arn:aws:ec2:us-east-2:733922282178:instance/i-0a942848608b0633b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a942848608b0633b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mamatha-aws-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0821d00bd000efaca",
            "private_dns": "ip-10-0-3-214.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0000aa9c1c139c35c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0321e051dc97d1c53",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "vprofile-dbserver"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "vprofile-dbserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a9a1432569bbccb"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw-terraform",
            "aws_nat_gateway.nat_gateway-terraformdev",
            "aws_security_group.SG-appserver",
            "aws_security_group.SG-backend",
            "aws_subnet.private_subnet_2a",
            "aws_subnet.public_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofile-memecache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011d59a275b482a49",
            "arn": "arn:aws:ec2:us-east-2:733922282178:instance/i-017864354276a0324",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017864354276a0324",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mamatha-aws-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0089f5404a9ab1592",
            "private_dns": "ip-10-0-3-254.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052e84e613d240a51",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0321e051dc97d1c53",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "vprofile-memecache"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "vprofile-memecache"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a9a1432569bbccb"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw-terraform",
            "aws_nat_gateway.nat_gateway-terraformdev",
            "aws_security_group.SG-appserver",
            "aws_security_group.SG-backend",
            "aws_subnet.private_subnet_2a",
            "aws_subnet.public_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofile-mqserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011d59a275b482a49",
            "arn": "arn:aws:ec2:us-east-2:733922282178:instance/i-094c89b4a172d5210",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094c89b4a172d5210",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mamatha-aws-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041af379fe4968494",
            "private_dns": "ip-10-0-3-15.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085e964067a643a3c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0321e051dc97d1c53",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "vprofile-mqserver"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "vprofile-mqserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a9a1432569bbccb"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw-terraform",
            "aws_nat_gateway.nat_gateway-terraformdev",
            "aws_security_group.SG-appserver",
            "aws_security_group.SG-backend",
            "aws_subnet.private_subnet_2a",
            "aws_subnet.public_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:internet-gateway/igw-096d1ec036a1ea791",
            "id": "igw-096d1ec036a1ea791",
            "owner_id": "733922282178",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-IGW"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-IGW"
            },
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "vprofile-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733922282178:loadbalancer/app/vprofile-lb/90e4fa7b14cab295",
            "arn_suffix": "app/vprofile-lb/90e4fa7b14cab295",
            "desync_mitigation_mode": "defensive",
            "dns_name": "vprofile-lb-790886354.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:733922282178:loadbalancer/app/vprofile-lb/90e4fa7b14cab295",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vprofile-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05dadb6b4d35e267a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-047149ea0ff603529"
              },
              {
                "subnet_id": "subnet-0accd4778b2f81a20"
              }
            ],
            "subnets": [
              "subnet-047149ea0ff603529",
              "subnet-0accd4778b2f81a20"
            ],
            "vpc_id": "vpc-0dbbec3efe6f2888d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.SG-elb",
            "aws_subnet.public_subnet_2a",
            "aws_subnet.public_subnet_2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vprofile-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733922282178:listener/app/vprofile-lb/90e4fa7b14cab295/135834b5509a95b0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733922282178:targetgroup/vprofile-targetgroup/13d2f30a41d039c7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:733922282178:listener/app/vprofile-lb/90e4fa7b14cab295/135834b5509a95b0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:733922282178:loadbalancer/app/vprofile-lb/90e4fa7b14cab295",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.vprofile-lb",
            "aws_lb_target_group.vprofile-targetgroup",
            "aws_security_group.SG-elb",
            "aws_subnet.public_subnet_2a",
            "aws_subnet.public_subnet_2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vprofile-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733922282178:targetgroup/vprofile-targetgroup/13d2f30a41d039c7",
            "arn_suffix": "targetgroup/vprofile-targetgroup/13d2f30a41d039c7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:733922282178:targetgroup/vprofile-targetgroup/13d2f30a41d039c7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vprofile-targetgroup",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "terraform-dev",
              "Name": "vprofile-targetgroup"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "vprofile-targetgroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "vprofile-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:733922282178:targetgroup/vprofile-targetgroup/13d2f30a41d039c7-20231018132304500200000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733922282178:targetgroup/vprofile-targetgroup/13d2f30a41d039c7",
            "target_id": "i-004f3db724e5c0eeb"
          },
          "dependencies": [
            "aws_instance.vprofile-appserver",
            "aws_lb_target_group.vprofile-targetgroup",
            "aws_security_group.SG-appserver",
            "aws_subnet.public_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway-terraformdev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e3ecc445f460cb2",
            "association_id": "eipassoc-05323527b12599159",
            "connectivity_type": "public",
            "id": "nat-08ab2cdc3893a2114",
            "network_interface_id": "eni-076e0ebf3a990a781",
            "private_ip": "10.0.1.7",
            "public_ip": "18.221.120.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-047149ea0ff603529",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "nat-gateway-terraform-dev"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "nat-gateway-terraform-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw-terraform",
            "aws_subnet.public_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05734c998b6d2efc41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08ab2cdc3893a2114",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05734c998b6d2efc4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw-terraform",
            "aws_nat_gateway.nat_gateway-terraformdev",
            "aws_route_table.private",
            "aws_subnet.public_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-096d1ec036a1ea791",
            "id": "r-rtb-080778d1617887b201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080778d1617887b20",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-terraform",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:route-table/rtb-05734c998b6d2efc4",
            "id": "rtb-05734c998b6d2efc4",
            "owner_id": "733922282178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ab2cdc3893a2114",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-private-route-table"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:route-table/rtb-080778d1617887b20",
            "id": "rtb-080778d1617887b20",
            "owner_id": "733922282178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096d1ec036a1ea791",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-public-route-table"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076f119bcbde801b5",
            "route_table_id": "rtb-05734c998b6d2efc4",
            "subnet_id": "subnet-0321e051dc97d1c53"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e80d0afe90978e9",
            "route_table_id": "rtb-05734c998b6d2efc4",
            "subnet_id": "subnet-006dca4da56d41c8e"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006fc4d8e86ccfa90",
            "route_table_id": "rtb-080778d1617887b20",
            "subnet_id": "subnet-047149ea0ff603529"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0955ca332b90b8e29",
            "route_table_id": "rtb-080778d1617887b20",
            "subnet_id": "subnet-0accd4778b2f81a20"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-appserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:security-group/sg-0c466244af30f35a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c466244af30f35a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "SG-appserver",
            "name_prefix": "",
            "owner_id": "733922282178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraform-dev",
              "Name": "SG-appserver"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "SG-appserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:security-group/sg-08a9a1432569bbccb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a9a1432569bbccb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c466244af30f35a8"
                ],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c466244af30f35a8"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c466244af30f35a8"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c466244af30f35a8"
                ],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "SG-backend",
            "name_prefix": "",
            "owner_id": "733922282178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraform-dev",
              "Name": "SG-backend"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "SG-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-appserver",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:security-group/sg-05dadb6b4d35e267a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dadb6b4d35e267a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-elb",
            "name_prefix": "",
            "owner_id": "733922282178",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraform-dev",
              "Name": "SG-elb"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "SG-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:subnet/subnet-0321e051dc97d1c53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0321e051dc97d1c53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733922282178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-us-east-2a-private-subnet"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-us-east-2a-private-subnet"
            },
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:subnet/subnet-006dca4da56d41c8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006dca4da56d41c8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733922282178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-us-east-2b-private-subnet"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-us-east-2b-private-subnet"
            },
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:subnet/subnet-047149ea0ff603529",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047149ea0ff603529",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733922282178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-us-east-2a-public-subnet"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-us-east-2a-public-subnet"
            },
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:subnet/subnet-0accd4778b2f81a20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0accd4778b2f81a20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "733922282178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-us-east-2b-public-subnet"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-us-east-2b-public-subnet"
            },
            "vpc_id": "vpc-0dbbec3efe6f2888d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733922282178:vpc/vpc-0dbbec3efe6f2888d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca13bd451fa692e3",
            "default_route_table_id": "rtb-0e5c4e8589dc462db",
            "default_security_group_id": "sg-06add09af9d5128c4",
            "dhcp_options_id": "dopt-0876a5158386099e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbbec3efe6f2888d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5c4e8589dc462db",
            "owner_id": "733922282178",
            "tags": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-vpc"
            },
            "tags_all": {
              "Environment": "terraform-dev",
              "Name": "terraform-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}